syntax = "proto3";

import "common_define.proto";
package cws.user;

message UserInfo {
    string user_uid = 1;
    string oid = 2;
    string user_name = 3;
	string phone_number = 4;
	cws.common.Gender gender = 5;
	string birthday = 6;
	string password = 7;
	string create_time = 8;
}

message DBConfig {
	string ip = 1;
	int32 port = 2;
	string user_name = 3;
	string password = 4;
	int32 pool_size = 5;
}
message RedisConfig {
	string ip = 1;
	int32 port = 2;
	int32 pool_size = 3;
}
message UserServiceConfig {
	DBConfig db_config = 1;
	RedisConfig redis_config = 2;
}

message UserSessionInfo {
	string user_id = 1;
}
